--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700');
+
+
+* {
+  box-sizing: border-box;
+}
+
+html, body, #root {
+  height: 100%;
+  width: 100%;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+p {
+  margin: 0;
+}
+
+
+.app-container {
+  display: flex;
+  flex-flow: row nowrap;
+  width: 100%;
+  height: 100%;
+}
+
+.nav-container {
+  width: 300px;
+  height: 100%;
+  border-right: 1px solid black;
+}
+
+.main-container {
+  display: flex;
+  flex: 1;
+  height: 100%;
+}
+
 .App {
   text-align: center;
 }
