--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ a {
 
 p {
   margin: 0;
+  color: #2b2e33
 }
 
 
@@ -29,7 +30,7 @@ p {
 }
 
 .nav-container {
-  width: 200px;
+  width: 250px;
   height: 100%;
   border-right: 1px solid black;
 }
@@ -40,10 +41,6 @@ p {
   flex: 1;
   height: 100%;
   padding: 30px;
-}
-
-.App {
-  text-align: center;
 }
 
 .loading-icon {
